Homepage gap fixes

--- a/src/components/modules/FullTxage.module.scss
+++ b/src/components/modules/FullTxage.module.scss
@@ -1,4 +1,4 @@
-@use '../../styles/variables.module' as *;
+@use "../../styles/variables.module" as *;
 
 .txageContainer {
   max-width: $wrapMaxWidth;
@@ -64,7 +64,12 @@
     padding: 0 5%;
 
     h4 {
+      font-size: 1.5rem;
       margin-bottom: 10px;
+    }
+
+    h3 {
+      font-size: 3rem;
     }
 
     h3,
@@ -82,12 +87,13 @@
     flex-direction: column !important;
 
     .txageText {
-      margin:0px;
-      padding:7% 5%;
+      margin: 0px;
+      padding: 7% 5%;
+      text-align: center;
 
       button {
-        display:block;
-        width:100%;
+        display: block;
+        width: 100%;
       }
     }
   }
